# pincer-chat

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: build.yml  main.yml
assets/: common.css  dark.css  light.css  style.css
migrations/2025-02-28-185228_create_messages/: down.sql  up.sql
migrations/2025-03-14-215248_thread_last_updated_at_trigger/: down.sql  up.sql
src/: assets.rs  assistant.rs  components.rs  main.rs  model.rs  schema.rs  screens.rs  text_generation.rs
src/assistant/: database.rs  notification.rs  prompts.rs
src/assistant/database/: models.rs  schema.rs
src/assistant/ollama/: api.rs  types.rs
src/components/: assistant_options_dialog.rs  assistant_parameters.rs  chat_input.rs  message.rs  message_bubble.rs  ollama.rs  thread_list.rs
src/ollama/: client.rs  command.rs  types.rs
src/pages/: chat.rs  startup.rs
src/screens/: chat.rs  startup.rs
