[package]
name = "rusty-local-ai-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
relm4 = { version = "0.9.1", features = ["macros"] }
relm4-components = "0.9.1"
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
