[package]
name = "rusty-local-ai-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
diesel = { version = "2.2.7", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel-async = "0.5.2"
futures = "0.3.31"
home = "0.5.11"
relm4 = "0.9.1"
relm4-components = "0.9.1"
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
