[package]
name = "pincer-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
diesel = { version = "2.2.7", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
diesel-async = { version = "0.5.2", features = [
    "sqlite",
    "async-connection-wrapper",
] }
diesel_migrations = "2.2.0"
futures = "0.3.31"
home = "0.5.11"
rand = "0.9.0"
relm4 = "0.9.1"
relm4-components = "0.9.1"
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
